# zksync-era

./: .devenv.flake.nix  .dockerignore  .env  .envrc  .eslintignore  .format_sql_snapshot  .gitignore  .gitmodules  .lycheeignore  .markdownlintignore  .markdownlintrc  .nvmrc  .prettier_cache.json  .prettier_cache_contracts.json  .prettierignore  .prettierrc.js  .solhintignore  AGENTS.md  AllContractsHashes.json  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  EigenDA.json  Executor.sol  Kingdom  LICENSE-MIT  Makefile  Opensea Integration  ProverSubsystem.yaml  Public  README.md  SECURITY.md  ZkStack.yaml  ZkSync GitHub Repository  [contracts]temp_custom_genesis_bypass.patch  backup-ecosystem.sh  basic Payment  bors.toml  (+56 more)
.devenv/: profile  (+7 more)
airbender_prover_server/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  rust-toolchain
airbender_prover_server/src/: client.rs  jobs.rs  main.rs  types.rs
airbender_prover_server/tests/: integration_test.rs
airbender_prover_server/vks/: snark_vk.json
core/: CHANGELOG.md  Cargo.toml  deny.toml  gcp-signer-review-fixes.diff  versions.json  whitelist.json
core/.cache/: signatures
core/.cargo/: config.toml
core/latest/: 404.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
core/v25.0.1/: index.html  print.html  searchindex.json  toc.html
core/v25.2.0/: searchindex.js  toc.js
core/v25.3.0/: print.html  searchindex.js  searchindex.json
core/v25.4.0/: print.html  searchindex.js  searchindex.json
core/v25.4.1_lens_custom_genesis/: print.html  searchindex.json
core/v25.4.2_lens_custom_genesis/: searchindex.js  toc.js
core/v26.0.0/: print.html
core/v26.1.0/: toc.js
core/v26.2.0/: searchindex.json
core/v26.2.1/: searchindex.js
core/v26.2.2/: toc.html
core/v26.4.0/: print.html  searchindex.js  searchindex.json
core/v26.7.0/: print.html
core/v26.7.1_lens_custom_genesis/: searchindex.js
core/v26.8.0/: toc.html
core/v26.8.1/: 404.html  index.html
core/v26.8.2/: print.html  toc.js
core/v26.8.4/: searchindex.json
core/v26.8.6/: index.html  print.html
core/v26.8.7/: 404.html
core/v27.0.0/: print.html  searchindex.js  searchindex.json
core/v27.3.0/: print.html  toc.html
core/v27.4.0/: searchindex.js  searchindex.json  toc.js
core/v27.5.0/: print.html
core/v27.5.3/: searchindex.json  toc.js
core/v27.5.6/: 404.html
core/v27.5.7/: searchindex.js
core/v28.0.0/: toc.html
core/v28.1.0/: print.html  searchindex.json  toc.js
core/v28.10.0/: print.html  searchindex.js  searchindex.json
core/v28.2.0/: searchindex.js  toc.html
core/v28.2.1/: print.html  searchindex.js  searchindex.json
core/v28.2.2/: toc.js
core/v28.2.3/: print.html  searchindex.js  searchindex.json  toc.html
core/v28.3.0/: print.html  searchindex.js  searchindex.json  toc.html  toc.js
core/v28.4.0/: print.html  searchindex.js  searchindex.json
core/v28.5.0/: print.html  searchindex.json
core/v28.6.0/: searchindex.js  toc.html  toc.js
core/v28.7.0/: print.html  searchindex.js  searchindex.json  toc.js
core/v28.8.0/: print.html
core/v28.9.0/: searchindex.js  searchindex.json  toc.html
core/v29.0.0/: print.html  searchindex.json
core/v29.1.151/: toc.html
core/v29.1.2/: toc.js
core/v29.11.0/: searchindex.json
core/v29.12.1/: searchindex.js
core/v29.15.1/: searchindex.json
core/v29.15.2/: print.html  searchindex.js
core/v29.4.1/: index.html  searchindex.js
core/v29.5.0/: searchindex.js  searchindex.json
core/v29.5.1/: print.html
core/v29.6.0/: print.html  searchindex.js
core/v29.7.0/: searchindex.json
core/v29.8.0/: toc.html
core/v29.9.0/: toc.js
fflonk_test/: Cargo.toml
fflonk_test/src/: main.rs
get_all_blobs/: .gitignore  Cargo.toml  README.md  getallblobs.js  package-lock.json  package.json
get_all_blobs/abi/: commitBatchesSharedBridge.json
get_all_blobs/src/: blob_info.rs  client.rs  main.rs
proof_cache/: Cargo.toml
proof_cache/src/: client.rs  lib.rs  main.rs  state.rs  storage.rs
prover/: CHANGELOG.md  Cargo.toml  README.md  compatibility_matrix.json  extract-setup-data-keys.sh  release-plz.toml  release-trigger.md  run.sh  rust-toolchain  rust-toolchain.toml  setup-data-cpu-keys.json  setup-data-gpu-keys.json  setup-data-keys.json  setup.sh  setup_gpu.sh  troubleshooting.md  versions.json
prover/circuit_synthesizer/: Cargo.toml  README.md
prover/config/: Cargo.toml
prover/data/: README.md
prover/docs/: 00_intro.md  01_gcp_vm.md  02_setup.md  03_launch.md  04_flow.md  05_proving_batch.md  99_further_reading.md  README.md  book.toml
prover/latest/: 03_launch.html  04_flow.html  05_proving_batch.html  index.html  print.html  searchindex.js  searchindex.json  toc.html
prover/proof_fri_compressor/: Cargo.toml  README.md
prover/prover/: Cargo.toml  README.md
prover/prover_cli/: Cargo.toml  README.md
prover/prover_dal/: Cargo.toml  build.rs  sqlx-data.json
prover/prover_fri/: Cargo.toml  README.md
prover/prover_fri_gateway/: Cargo.toml
prover/prover_fri_types/: Cargo.toml  README.md
prover/prover_fri_utils/: Cargo.toml
prover/prover_tee/: Cargo.toml
prover/prover_tee_gateway/: Cargo.toml  README.md
prover/prover_version/: Cargo.toml
prover/setup_key_generator_and_server/: Cargo.toml  README.md
prover/testing/: Cargo.toml
prover/tools/: Cargo.toml  README.md
prover/v16.3.1/: 00_intro.html  04_flow.html  print.html
prover/v16.8.0_rc.1/: 05_proving_batch.html
prover/v16.8.0_rc.1_circuit_prover_gcs_troubleshooting_release_1/: 99_further_reading.html
prover/v16.8.0_rc.2/: index.html
retrieve-blobs/: Cargo.toml
sequencer_proof_client/: Cargo.toml
validium_mode_example/: BytesWriter.abi  BytesWriter.sol  Cargo.toml  ERC20.abi  IERC20.sol  IERC20Metadata.sol  README.md
zk_toolbox/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  rust-toolchain
zkos_prover/: Cargo.toml
zkstack_cli/: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml  rust-toolchain
zksync_os_linked_prover/: Cargo.toml
zksync_os_prover/: Cargo.toml
zksync_os_snark_prover/: Cargo.toml  README.md
(+11831 files in other folders)
