[workspace]
members = [
    # Binaries
    "core/bin/block_reverter",
    "core/bin/contract-verifier",
    "core/bin/external_node",
    "core/bin/merkle_tree_consistency_checker",
    "core/bin/snapshots_creator",
    "core/bin/storage_logs_dedup_migration",
    "core/bin/system-constants-generator",
    "core/bin/verified_sources_fetcher",
    "core/bin/zksync_server",
    # Libraries
    "core/lib/zksync_core",
    "core/lib/basic_types",
    "core/lib/config",
    "core/lib/constants",
    "core/lib/contracts",
    "core/lib/crypto",
    "core/lib/circuit_breaker",
    "core/lib/commitment_utils",
    "core/lib/dal",
    "core/lib/env_config",
    "core/lib/eth_client",
    "core/lib/eth_signer",
    "core/lib/l1_contract_interface",
    "core/lib/mempool",
    "core/lib/merkle_tree",
    "core/lib/mini_merkle_tree",
    "core/lib/node",
    "core/lib/object_store",
    "core/lib/prometheus_exporter",
    "core/lib/prover_interface",
    "core/lib/queued_job_processor",
    "core/lib/state",
    "core/lib/storage",
    "core/lib/types",
    "core/lib/protobuf_config",
    "core/lib/utils",
    "core/lib/vlog",
    "core/lib/multivm",
    "core/lib/vm_utils",
    "core/lib/web3_decl",
    "core/lib/snapshots_applier",

    # Test infrastructure
    "core/tests/test_account",
    "core/tests/loadnext",
    "core/tests/vm-benchmark",
    "core/tests/vm-benchmark/harness",

    # SDK section
    "sdk/zksync-rs",

    "validium_mode_example",
]
resolver = "2"

exclude = []

# for `perf` profiling
[profile.perf]
inherits = "release"
debug = true
