[workspace]
members = [
    # Binaries
    "core/bin/block_reverter",
    "core/bin/contract-verifier",
    "core/bin/external_node",
    "core/bin/merkle_tree_consistency_checker",
    "core/bin/snapshots_creator",
    "core/bin/system-constants-generator",
    "core/bin/verified_sources_fetcher",
    "core/bin/zksync_server",
    "core/bin/genesis_generator",
    "core/bin/zksync_tee_prover",
    # Node services
    "core/node/node_framework",
    "core/node/proof_data_handler",
    "core/node/block_reverter",
    "core/node/commitment_generator",
    "core/node/house_keeper",
    "core/node/genesis",
    "core/node/shared_metrics",
    "core/node/db_pruner",
    "core/node/fee_model",
    "core/node/da_dispatcher",
    "core/node/eth_sender",
    "core/node/vm_runner",
    "core/node/test_utils",
    "core/node/state_keeper",
    "core/node/reorg_detector",
    "core/node/consistency_checker",
    "core/node/metadata_calculator",
    "core/node/node_sync",
    "core/node/node_storage_init",
    "core/node/consensus",
    "core/node/contract_verification_server",
    "core/node/api_server",
    "core/node/tee_verifier_input_producer",
    "core/node/base_token_adjuster",
    "core/node/external_proof_integration_api",
    # Libraries
    "core/lib/db_connection",
    "core/lib/zksync_core_leftovers",
    "core/lib/basic_types",
    "core/lib/config",
    "core/lib/constants",
    "core/lib/contract_verifier",
    "core/lib/contracts",
    "core/lib/circuit_breaker",
    "core/lib/dal",
    "core/lib/env_config",
    "core/lib/da_client",
    "core/lib/default_da_clients",
    "core/lib/eth_client",
    "core/lib/eth_signer",
    "core/lib/l1_contract_interface",
    "core/lib/mempool",
    "core/lib/merkle_tree",
    "core/lib/mini_merkle_tree",
    "core/lib/node_framework_derive",
    "core/lib/object_store",
    "core/lib/prover_interface",
    "core/lib/queued_job_processor",
    "core/lib/state",
    "core/lib/storage",
    "core/lib/tee_verifier",
    "core/lib/types",
    "core/lib/protobuf_config",
    "core/lib/utils",
    "core/lib/vlog",
    "core/lib/multivm",
    "core/lib/vm_utils",
    "core/lib/web3_decl",
    "core/lib/snapshots_applier",
    "core/lib/crypto_primitives",
    "core/lib/external_price_api",
    # Test infrastructure
    "core/tests/test_account",
    "core/tests/loadnext",
    "core/tests/vm-benchmark",
    "core/tests/vm-benchmark/harness",
    # Parts of prover workspace that are needed for Core workspace
    "prover/crates/lib/prover_dal",
]
resolver = "2"

exclude = []

# for `perf` profiling
[profile.perf]
inherits = "release"
debug = true

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-era"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[workspace.dependencies]
# "External" dependencies
anyhow = "1"
assert_matches = "1.5"
async-trait = "0.1"
axum = "0.7.5"
backon = "0.4.4"
bigdecimal = "0.4.5"
bincode = "1"
blake2 = "0.10"
chrono = "0.4"
clap = "4.2.2"
codegen = "0.2.0"
criterion = "0.4.0"
ctrlc = "3.1"
dashmap = "5.5.3"
derive_more = "=1.0.0-beta.6"
envy = "0.4"
ethabi = "18.0.0"
flate2 = "1.0.28"
futures = "0.3"
google-cloud-auth = "0.16.0"
google-cloud-storage = "0.20.0"
governor = "0.4.2"
hex = "0.4"
http = "1.1"
hyper = "1.3"
iai = "0.1"
insta = "1.29.0"
itertools = "0.10"
jsonrpsee = { version = "0.23", default-features = false }
lazy_static = "1.4"
leb128 = "0.2.5"
lru = { version = "0.12.1", default-features = false }
mini-moka = "0.10.0"
num = "0.4.0"
num_cpus = "1.13"
num_enum = "0.7.2"
once_cell = "1"
opentelemetry = "0.24.0"
opentelemetry_sdk = "0.24.0"
opentelemetry-otlp = "0.17.0"
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry-appender-tracing = "0.5"
pin-project-lite = "0.2.13"
pretty_assertions = "1"
prost = "0.12.1"
rand = "0.8"
rayon = "1.3.1"
regex = "1"
reqwest = "0.12"
rlp = "0.5"
rocksdb = "0.21.0"
rustc_version = "0.4.0"
rustls = "0.23"
secp256k1 = { version = "0.27.0", features = ["recovery", "global-context"] }
secrecy = "0.8.0"
semver = "1"
sentry = "0.31"
serde = "1"
serde_json = "1"
serde_with = "1"
serde_yaml = "0.9"
sha2 = "0.10.8"
sha3 = "0.10.8"
sqlx = "0.8.0"
static_assertions = "1.1"
structopt = "0.3.20"
strum = "0.26"
tempfile = "3.0.2"
test-casing = "0.1.2"
test-log = "0.2.15"
thiserror = "1"
thread_local = "1.1"
tikv-jemallocator = "0.5"
tiny-keccak = "2"
tokio = "1"
tower = "0.4.13"
tower-http = "0.5.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.25.0"
time = "0.3.36" # Has to be same as used by `tracing-subscriber`
url = "2"
web3 = "0.19.0"
fraction = "0.15.3"

# Proc-macro
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
trybuild = "1.0"

# "Internal" dependencies
vise = "0.2.0"
vise-exporter = "0.2.0"

# Here and below:
# We *always* pin the latest version of protocol to disallow accidental changes in the execution logic.
# However, for the historical version of protocol crates, we have lax requirements. Otherwise,
# Bumping a crypto dependency like `boojum` would require us to republish all the historical packages.
circuit_sequencer_api_1_3_3 = { package = "circuit_sequencer_api", version = "0.133" }
circuit_sequencer_api_1_4_0 = { package = "circuit_sequencer_api", version = "0.140" }
circuit_sequencer_api_1_4_1 = { package = "circuit_sequencer_api", version = "0.141" }
circuit_sequencer_api_1_4_2 = { package = "circuit_sequencer_api", version = "0.142" }
circuit_sequencer_api_1_5_0 = { git = "https://github.com/matter-labs/era-zkevm_test_harness.git", branch = "vv-oracle-parallelization2", package = "circuit_sequencer_api" }
crypto_codegen = { package = "zksync_solidity_vk_codegen", version = "=0.1.0" }
kzg = { git = "https://github.com/matter-labs/era-zkevm_test_harness.git", branch = "vv-oracle-parallelization2", package = "zksync_kzg" }
zk_evm = { version = "=0.133.0" }
zk_evm_1_3_1 = { package = "zk_evm", version = "0.131.0-rc.2" }
zk_evm_1_3_3 = { package = "zk_evm", version = "0.133.0" }
zk_evm_1_4_0 = { package = "zk_evm", version = "0.140.0" }
zk_evm_1_4_1 = { package = "zk_evm", version = "0.141.0" }
zk_evm_1_5_0 = { package = "zk_evm", version = "=0.150.0" }

# New VM; pinned to a specific commit because of instability
vm2 = { git = "https://github.com/matter-labs/vm2.git", rev = "9a38900d7af9b1d72b47ce3be980e77c1239a61d" }

# Consensus dependencies.
zksync_concurrency = "=0.1.0-rc.10"
zksync_consensus_bft = "=0.1.0-rc.10"
zksync_consensus_crypto = "=0.1.0-rc.10"
zksync_consensus_executor = "=0.1.0-rc.10"
zksync_consensus_network = "=0.1.0-rc.10"
zksync_consensus_roles = "=0.1.0-rc.10"
zksync_consensus_storage = "=0.1.0-rc.10"
zksync_consensus_utils = "=0.1.0-rc.10"
zksync_protobuf = "=0.1.0-rc.10"
zksync_protobuf_build = "=0.1.0-rc.10"

# "Local" dependencies
zksync_multivm = { version = "0.1.0", path = "core/lib/multivm" }
zksync_prover_dal = { version = "0.1.0", path = "prover/crates/lib/prover_dal" }
zksync_vlog = { version = "0.1.0", path = "core/lib/vlog" }
zksync_vm_utils = { version = "0.1.0", path = "core/lib/vm_utils" }
zksync_vm_benchmark_harness = { version = "0.1.0", path = "core/tests/vm-benchmark/harness" }
zksync_basic_types = { version = "0.1.0", path = "core/lib/basic_types" }
zksync_circuit_breaker = { version = "0.1.0", path = "core/lib/circuit_breaker" }
zksync_config = { version = "0.1.0", path = "core/lib/config" }
zksync_contract_verifier_lib = { version = "0.1.0", path = "core/lib/contract_verifier" }
zksync_contracts = { version = "0.1.0", path = "core/lib/contracts" }
zksync_core_leftovers = { version = "0.1.0", path = "core/lib/zksync_core_leftovers" }
zksync_dal = { version = "0.1.0", path = "core/lib/dal" }
zksync_db_connection = { version = "0.1.0", path = "core/lib/db_connection" }
zksync_env_config = { version = "0.1.0", path = "core/lib/env_config" }
zksync_eth_client = { version = "0.1.0", path = "core/lib/eth_client" }
zksync_da_client = { version = "0.1.0", path = "core/lib/da_client" }
zksync_default_da_clients = { version = "0.1.0", path = "core/lib/default_da_clients" }
zksync_eth_signer = { version = "0.1.0", path = "core/lib/eth_signer" }
zksync_health_check = { version = "0.1.0", path = "core/lib/health_check" }
zksync_l1_contract_interface = { version = "0.1.0", path = "core/lib/l1_contract_interface" }
zksync_mempool = { version = "0.1.0", path = "core/lib/mempool" }
zksync_merkle_tree = { version = "0.1.0", path = "core/lib/merkle_tree" }
zksync_mini_merkle_tree = { version = "0.1.0", path = "core/lib/mini_merkle_tree" }
zksync_object_store = { version = "0.1.0", path = "core/lib/object_store" }
zksync_protobuf_config = { version = "0.1.0", path = "core/lib/protobuf_config" }
zksync_prover_interface = { version = "0.1.0", path = "core/lib/prover_interface" }
zksync_queued_job_processor = { version = "0.1.0", path = "core/lib/queued_job_processor" }
zksync_snapshots_applier = { version = "0.1.0", path = "core/lib/snapshots_applier" }
zksync_state = { version = "0.1.0", path = "core/lib/state" }
zksync_storage = { version = "0.1.0", path = "core/lib/storage" }
zksync_system_constants = { version = "0.1.0", path = "core/lib/constants" }
zksync_tee_verifier = { version = "0.1.0", path = "core/lib/tee_verifier" }
zksync_test_account = { version = "0.1.0", path = "core/tests/test_account" }
zksync_types = { version = "0.1.0", path = "core/lib/types" }
zksync_utils = { version = "0.1.0", path = "core/lib/utils" }
zksync_web3_decl = { version = "0.1.0", path = "core/lib/web3_decl" }
zksync_crypto_primitives = { version = "0.1.0", path = "core/lib/crypto_primitives" }
zksync_external_price_api = { version = "0.1.0", path = "core/lib/external_price_api" }

# Framework and components
zksync_node_framework = { version = "0.1.0", path = "core/node/node_framework" }
zksync_node_framework_derive = { version = "0.1.0", path = "core/lib/node_framework_derive" }
zksync_eth_watch = { version = "0.1.0", path = "core/node/eth_watch" }
zksync_shared_metrics = { version = "0.1.0", path = "core/node/shared_metrics" }
zksync_proof_data_handler = { version = "0.1.0", path = "core/node/proof_data_handler" }
zksync_block_reverter = { version = "0.1.0", path = "core/node/block_reverter" }
zksync_commitment_generator = { version = "0.1.0", path = "core/node/commitment_generator" }
zksync_house_keeper = { version = "0.1.0", path = "core/node/house_keeper" }
zksync_node_genesis = { version = "0.1.0", path = "core/node/genesis" }
zksync_da_dispatcher = { version = "0.1.0", path = "core/node/da_dispatcher" }
zksync_eth_sender = { version = "0.1.0", path = "core/node/eth_sender" }
zksync_node_db_pruner = { version = "0.1.0", path = "core/node/db_pruner" }
zksync_node_fee_model = { version = "0.1.0", path = "core/node/fee_model" }
zksync_vm_runner = { version = "0.1.0", path = "core/node/vm_runner" }
zksync_external_proof_integration_api = { version = "0.1.0", path = "core/node/external_proof_integration_api" }
zksync_node_test_utils = { version = "0.1.0", path = "core/node/test_utils" }
zksync_state_keeper = { version = "0.1.0", path = "core/node/state_keeper" }
zksync_reorg_detector = { version = "0.1.0", path = "core/node/reorg_detector" }
zksync_consistency_checker = { version = "0.1.0", path = "core/node/consistency_checker" }
zksync_metadata_calculator = { version = "0.1.0", path = "core/node/metadata_calculator" }
zksync_node_sync = { version = "0.1.0", path = "core/node/node_sync" }
zksync_node_storage_init = { version = "0.1.0", path = "core/node/node_storage_init" }
zksync_node_consensus = { version = "0.1.0", path = "core/node/consensus" }
zksync_contract_verification_server = { version = "0.1.0", path = "core/node/contract_verification_server" }
zksync_node_api_server = { version = "0.1.0", path = "core/node/api_server" }
zksync_tee_verifier_input_producer = { version = "0.1.0", path = "core/node/tee_verifier_input_producer" }
zksync_base_token_adjuster = { version = "0.1.0", path = "core/node/base_token_adjuster" }
